<resources>
    <string name="app_name">Farm Bidding</string>
    <string name="header_logo">Farm Bidding System</string>

    <!--  Bottom Bar Strings  -->
    <string name="home_btn">Home</string>
    <string name="my_bid_btn">My Bid</string>
    <string name="profile_btn">Profile</string>

    <!--  Homepage strings  -->
    <string name="header_img_desc">A brief description of the image for accessibility"</string>
    <string name="searchBar_img_desc">A search bar logo for search bar</string>
    <string name="carousel_img_desc">Images for fields images to display</string>
    <string name="bid_btn_img_desc">Bid button Image</string>
    <string name="auc_title">Live Auctions</string>
    <string name="closing_title">Closing Soon</string>
    <string name="search_placeholder">Search for various crops…</string>
    <string name="bid_btn_txt">Bid Now</string>
    <string name="view_detail_btn_txt">View Details</string>
    <string name="no_auc_msg">No active auctions at the moment.</string>

    <!--  Bid Form Strings  -->
    <string name="bid_form_header">Place Your Bid</string>
    <string name="bid_form_placeholder">Enter amount (e.g., 4600)</string>
    <string name="bid_form_btn">Confirm Bid</string>

    <!--  My bid strings  -->
    <string name="my_bid_header">My Active Bids</string>

    <!-- Item auction strings   -->
    <string name="auc_img_desc">crop pics</string>

    <!-- login strings -->


    <string name="welcome">Welcome</string>
    <string name="login">Log In</string>

    <string name="email_hint">Your Email</string>
    <string name="password_hint">Your Password</string>

    <string name="forgot_password">Forgot Password?</string>

    <string name="signup_text">Don\'t have an account?</string>
    <string name="signup_btn_txt">Signup</string>

    <!-- signup screen strings-->


    <string name="signup">Signup</string>
    <string name="full_name">Full Name</string>
    <string name="cnic">CNIC</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="farm_location">Farm Location</string>
    <string name="farm_size">Farm Size</string>
    <string name="city">City</string>
    <string name="form_txt">Account Information</string>
    <string name="spinner_txt">User Type</string>
    <string name="buyer_details_title">Buyer Details</string>
    <string name="buyer_spinner_hint">Buyer Type</string>
    <string name="comp_type_hint">Company Type</string>
    <string name="farm_details_txt">Farm Details</string>
    <string name="login_txt">Already have an account?</string>
    <string name="login_btn_txt">Sign In</string>

    <!-- view bid strings -->

    <string name="back_to_auctions">Back to Auctions</string>
    <string name="place_bid">Place Bid Now</string>

    <!--  Search Activity Strings  -->
    <string name="search_hint">Search for crops</string>
    <string name="search_txt">Start typing to search...</string>


    <!-- Create Auction Strings   -->
    <string name="createAuctionTitle">Create New Auction</string>
    <string name="cropCatHint">Crop Category *</string>
    <string name="itemNameHint">Item Name *</string>
    <string name="descHint">Description *</string>
    <string name="basePriceHint">Base Price (Rs) *</string>
    <string name="qtyHint">Quantity (KG) *</string>
    <string name="aucEndDateHint">Auction End Date *</string>
    <string name="aucImgTitle">Item Image *</string>
    <string name="aucCameraHint">Camera</string>
    <string name="aucGalleryHint">Gallery</string>
    <string name="publishAucBtn">Publish Auction</string>
</resources>